@@ -41,7 +41,7 @@ DefaultAuthType Basic
 
 # Restrict access to configuration files...
 <Location /admin/conf>
-  AuthType Basic
+  AuthType Default
   Require user @SYSTEM
   Order allow,deny
   Allow localhost
@@ -57,7 +57,7 @@ DefaultAuthType Basic
 
   # All administration operations require an adminstrator to authenticate...
   <Limit Pause-Printer Resume-Printer Set-Printer-Attributes Enable-Printer Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer Promote-Job Schedule-Job-After CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-Class CUPS-Delete-Class CUPS-Accept-Jobs CUPS-Reject-Jobs CUPS-Set-Default>
-    AuthType Basic
+    AuthType Default
     Require user @SYSTEM
     Order deny,allow
   </Limit>
