@@ -41,7 +41,7 @@ function reset_config()
 "\\n" +
 "# Restreindre l'accès au ficher de configuration...\\n" +
 "<Location /admin/conf>\\n" +
-"  AuthType Basic\\n" +
+"  AuthType Default\\n" +
 "  Require user @SYSTEM\\n" +
 "  Order allow,deny\\n" +
 "  Allow localhost\\n" +
@@ -57,7 +57,7 @@ function reset_config()
 "\\n" +
 "  # Toutes les opérations d'administration nécessite l'authentification d'un adminstrateur...\\n" +
 "  <Limit Pause-Printer Resume-Printer Set-Printer-Attributes Enable-Printer Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer Promote-Job Schedule-Job-After CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-Class CUPS-Delete-Class CUPS-Accept-Jobs CUPS-Reject-Jobs CUPS-Set-Default>\\n" +
-"    AuthType Basic\\n" +
+"    AuthType Default\\n" +
 "    Require user @SYSTEM\\n" +
 "    Order deny,allow\\n" +
 "  </Limit>\\n" +
