@@ -5,6 +5,9 @@ CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #1775, STR #2130, STR #2131,
 	  STR #2263, STR #2356, STR #2397)
+	- You can now specify "AuthType Default" in the cupsd.conf
+	  file to use the default authentication defined by the
+	  DefaultAuthType directive.
 	- The SNMP backend no longer adds a default Address line
 	  when none is specified in the snmp.conf file; this allows
 	  the backend to be easily disabled as needed (STR #2434)
